<resources>
    <string name="app_name">BrainTrainer-TAP-Practica1-Comp2</string>
    <string name="title_main">BRAIN TRAINING</string>
    <string name="select_difficulty">SELECCIONA UNA DIFICULTAD</string>
    <string name="difficulty_easy">FÁCIL</string>
    <string name="difficulty_medium">MEDIO</string>
    <string name="difficulty_hard">DIFÍCIL</string>

    <string name="menu_game">GAME</string>
    <string name="menu_history">HISTORY</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_exit">EXIT</string>

    <string name="title_settings">AJUSTES</string>
    <string name="label_game_time">TIEMPO DE JUEGO (SEGUNDOS)</string>
    <string name="hint_time">Ej. 60</string>
    <string name="btn_save">GUARDAR</string>
    <string name="msg_saved">Ajustes guardados</string>

    <string name="timer_zero">00:00</string>
    <string name="score_format">Score: %1$d</string>
    <string name="op_format_sum">%1$d + %2$d</string>
    <string name="op_format_sub">%1$d - %2$d</string>
    <string name="op_format_mul">%1$d × %2$d</string>
    <string name="op_format_div">%1$d ÷ %2$d</string>

    <string name="title_final">Puntaje: </string>
    <string name="restart_final">VOLVER A JUGAR </string>
    <string name="menu_final">MENÚ PRINCIPAL </string>

</resources>